[gd_scene load_steps=19 format=3 uid="uid://c8sivx3hx1oy1"]

[ext_resource type="Script" path="res://enemies/enemy_gunner_base.gd" id="1_oxxcx"]
[ext_resource type="Script" path="res://enemies/enemy_hurtbox.gd" id="2_3looh"]
[ext_resource type="PackedScene" uid="uid://bhbi3rhsatvw4" path="res://glb_inherited_scenes/mobile_gunner.tscn" id="3_n2hhp"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_txubl"]
height = 2.75

[sub_resource type="Animation" id="Animation_i1lri"]
resource_name = "shoot"
length = 0.950004
step = 0.0166667
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.383334, 0.866668),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"shoot_bullet"
}, {
"args": [],
"method": &"try_end_attack"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.383334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"stop_aiming_at_target"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cvygw"]
_data = {
"shoot": SubResource("Animation_i1lri")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0i2pn"]
animation = &"AimingRifleCR"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x678d"]
animation = &"AimingRifleCR"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b2g3f"]
animation = &"RifleRunForwardCR"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_f2dey"]
blend_point_0/node = SubResource("AnimationNodeAnimation_x678d")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_b2g3f")
blend_point_1/pos = 5.0
max_space = 5.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_de6mf"]
animation = &"FiringRifleCR"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_nya6y"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2007q"]
xfade_time = 0.2
advance_mode = 2
advance_condition = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_gfq7g"]
xfade_time = 0.15
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_g6unv"]
xfade_time = 1.0
advance_mode = 2
advance_condition = &"shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vhd2h"]
xfade_time = 0.15
priority = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b8mbx"]
states/AimingRifleCR/node = SubResource("AnimationNodeAnimation_0i2pn")
states/AimingRifleCR/position = Vector2(523.413, -12.6025)
states/WalkBlendSpace/node = SubResource("AnimationNodeBlendSpace1D_f2dey")
states/WalkBlendSpace/position = Vector2(368, 99.875)
states/shoot/node = SubResource("AnimationNodeAnimation_de6mf")
states/shoot/position = Vector2(623.5, 99.9375)
transitions = ["Start", "WalkBlendSpace", SubResource("AnimationNodeStateMachineTransition_nya6y"), "WalkBlendSpace", "shoot", SubResource("AnimationNodeStateMachineTransition_2007q"), "shoot", "AimingRifleCR", SubResource("AnimationNodeStateMachineTransition_gfq7g"), "AimingRifleCR", "shoot", SubResource("AnimationNodeStateMachineTransition_g6unv"), "AimingRifleCR", "WalkBlendSpace", SubResource("AnimationNodeStateMachineTransition_vhd2h")]
graph_offset = Vector2(177.413, -50.6025)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_vdhls"]
nodes/StateMachine/node = SubResource("AnimationNodeStateMachine_b8mbx")
nodes/StateMachine/position = Vector2(70, 150)
node_connections = [&"output", 0, &"StateMachine"]

[node name="EnemyMobileGunner" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 11
platform_floor_layers = 4294901762
script = ExtResource("1_oxxcx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_txubl")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
target_desired_distance = 20.0
avoidance_enabled = true
radius = 3.0

[node name="EnemyHurtbox" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 9
script = ExtResource("2_3looh")
hit_particle_color = Color(0, 0, 1, 1)
opponent_hitboxes = ["PlayerHitbox"]

[node name="HurtboxCollider" type="CollisionShape3D" parent="EnemyHurtbox"]
shape = SubResource("CapsuleShape3D_txubl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cvygw")
}

[node name="MobileGunner" parent="." instance=ExtResource("3_n2hhp")]
transform = Transform3D(-0.15, 5.2318e-17, -1.31134e-08, 5.2318e-17, 0.15, -5.2318e-17, 1.31134e-08, -5.2318e-17, -0.15, 0, -1.37032, 0)

[node name="Skeleton3D" parent="MobileGunner/ControlRig" index="0"]
bones/0/position = Vector3(0.0933373, 8.38288, -0.121089)
bones/0/rotation = Quaternion(-0.109447, -0.340026, -0.0277102, 0.933615)
bones/1/rotation = Quaternion(0.0407421, -0.00115062, 0.0044415, 0.999159)
bones/2/rotation = Quaternion(0.133964, 0.000199372, -0.00512113, 0.990973)
bones/3/rotation = Quaternion(0.138235, -8.56769e-05, -0.00503845, 0.990387)
bones/4/rotation = Quaternion(0.0226992, 0.0650534, 0.00871338, 0.997586)
bones/5/rotation = Quaternion(-0.030895, 0.191476, 0.091057, 0.976776)
bones/7/rotation = Quaternion(-0.422115, -0.202167, 0.650868, -0.597761)
bones/8/rotation = Quaternion(0.32754, -0.192968, 0.257251, 0.888427)
bones/9/rotation = Quaternion(-1.46706e-06, -1.68759e-06, 0.530195, 0.847876)
bones/10/rotation = Quaternion(-0.00186429, 0.00186761, 2.31328e-05, 0.999997)
bones/11/rotation = Quaternion(0.3162, -0.254169, 0.717481, 0.566248)
bones/12/rotation = Quaternion(0.379568, -0.248568, -0.508903, 0.731546)
bones/13/rotation = Quaternion(1.90634e-06, -1.10007e-06, -0.757708, 0.652593)
bones/14/rotation = Quaternion(-0.00201468, -0.00201225, -4.34282e-05, 0.999996)
bones/15/rotation = Quaternion(0.415098, 0.0442783, 0.898238, -0.137481)
bones/16/rotation = Quaternion(-0.199608, 1.73516e-06, 1.77938e-07, 0.979876)
bones/17/rotation = Quaternion(0.481433, 0.0236262, -0.0259491, 0.87578)
bones/18/rotation = Quaternion(0.30964, -0.214208, 0.0718171, 0.923623)
bones/20/rotation = Quaternion(0.0250798, -0.0748388, 0.995639, 0.0497257)
bones/20/scale = Vector3(1, 0.999999, 1)
bones/21/rotation = Quaternion(-0.274064, -3.38106e-07, -1.2378e-07, 0.961711)
bones/22/rotation = Quaternion(0.655434, 0.1114, 0.00171767, 0.746989)
bones/23/rotation = Quaternion(0.305411, 0.220836, -0.0728624, 0.923389)

[node name="BoneAttachment3D" parent="MobileGunner/ControlRig/Skeleton3D" index="1"]
transform = Transform3D(0.538006, 0.462977, 0.704416, 0.560498, 0.427677, -0.709178, -0.629596, 0.776366, -0.0294054, -2.2656, 12.7976, 2.11366)

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeBlendTree_vdhls")
anim_player = NodePath("../MobileGunner/AnimationPlayer")
advance_expression_base_node = NodePath("..")
active = true
parameters/StateMachine/conditions/shoot = false
parameters/StateMachine/WalkBlendSpace/blend_position = 0

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]

[editable path="MobileGunner"]
